--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.8.3"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
