--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "typescript": "~3.8.3"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
